[package]
name = "pid_control"
version = "0.7.0"
authors = ["Marc Brinkmann <git@marcbrinkmann.de>"]
repository = "https://github.com/mbr/pid_control-rs"
docs = "http://mbr.github.io/pid_control-rs/pid_control/"
description = """A PID controller library

Allows flexible creation of fast PID controllers to control plants of any kind.
"""
license = "MIT"

[dependencies]
